--- a/src/main/resources/templates/clients/index.html
+++ b/src/main/resources/templates/clients/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home ThymeLife</title>
+    <title>TWProjects Listagem de clientes</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1.5.10/css/pico.min.css" />
     <!--  Pico versão 2@
@@ -25,8 +25,28 @@
         </ul>
     </nav>
     <main class="container">
-        <h1>Home</h1>
-        <p>Projeto Spring Boot + ThymeLife Fundamentos Frontend e Backend</p>
+        <h1>Listagem de Clientes</h1>
+        
+        <table>
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Nome</th>
+                    <th scope="col">E-mail</th>
+                    <th scope="col">Telefone</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="item : ${clients}">
+                    <td scope="row" th:text="*{item.id}"></td>
+                    <td scope="row" th:text="*{item.name}"></td>
+                    <td scope="row" th:text="*{item.email}"></td>
+                    <td scope="row" th:text="*{item.phone}"></td>
+                </tr>
+            </tbody>
+        </table>
+
+        <a href="#" role="button">Novo Cliente</a>
     </main>
 </body>
 </html>
