--- a/src/main/resources/templates/clients/create.html
+++ b/src/main/resources/templates/clients/create.html
@@ -21,7 +21,7 @@
             <li><strong>TWProjects</strong></li>
         </ul>
         <ul>
-            <li><a href="#">Clientes</a></li>
+            <li><a href="http://localhost:8080/clients">Clientes</a></li>
         </ul>
     </nav>
     <main class="container">
@@ -48,7 +48,15 @@
                 />
             </label>
             <!-- pattern="^\(\d{2}\) \d{1} \d{4}-\d{4}$" -->
-            <button type="submit">Cadastrar</button>
+            <div class="d-flex">
+                <button type="submit">Cadastrar</button>
+            
+                <a href="http://localhost:8080/clients" role="button">
+                Cancelar 
+                </a>
+            </div>
+
+            
         </form>
     </main>
 
