--- a/src/main/resources/templates/clients/index.html
+++ b/src/main/resources/templates/clients/index.html
@@ -7,50 +7,80 @@
     <!--  Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
-    <nav class="container-fluid">
-        <ul>
-            <li><strong>TWProjects</strong></li>
-        </ul>
-        <ul>
-            <li>
-                <a href="http://localhost:8080/clients/create">
-                    <button>New</button>
-                </a>
-            </li>
-        </ul>
+    <nav class="container-fluid bg-primary text-white d-flex justify-content-between align-items-center py-5 px-5 mb-5">
+        
+        <a href="http://localhost:8080/clients">
+            <button class="btn btn-success text-white fs-4 px-4">TWProjects</button>
+        </a>
+        
+        <a href="http://localhost:8080/clients/create">
+            <button class="btn btn-success text-white px-4">Adicionar 
+                <i class="bi bi-arrow-up-right-circle-fill fs-5"></i>
+            </button>
+        </a>
     </nav>
     <main class="container">
-        <h1>Listagem de Clientes</h1>
+        <div class="d-flex py-3 bg-primary text-white justify-content-center rounded mb-5">
+            <h1>Listagem de Clientes</h1>
+        </div>
         
-        <table>
+        <table class="table">
             <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Nome</th>
-                    <th scope="col">E-mail</th>
-                    <th scope="col">Telefone</th>
-                    <th scope="col">Ações</th>
+                <tr class="">
+                    <th class="text-center">#</th>
+                    <th>Nome</th>
+                    <th>E-mail</th>
+                    <th>Telefone</th>
+                    <th class="text-center">Ações</th>
                 </tr>
             </thead>
             <tbody>
-                <tr th:each="item : ${clients}">
-                    <td scope="row" th:text="*{item.id}"> </td>
-                    <td scope="row" th:text="*{item.name}"> </td>
-                    <td scope="row" th:text="*{item.email}"> </td>
-                    <td scope="row" th:text="*{item.phone}"> </td>
-                    <td>
-                        
-                    <a th:href="@{'/clients/edit/' + ${item.id}}">Editar</a>
-                    <a th:href="@{'/clients/delete/' + ${item.id}}">Apagar</a>
-                        
+                <tr th:each="item : ${clients}" class="pt-2">
+                    <td class="pt-2" th:text="*{item.id}"> </td>
+                    <td th:text="*{item.name}"> </td>
+                    <td th:text="*{item.email}"> </td>
+                    <td th:text="*{item.phone}"> </td>
+                    <td class="d-flex align-items-center gap-1 justify-content-center w-75 ">
+                        <a th:href="@{'/clients/edit/'+${item.id}}" class="bg-warning  px-2 py-2 d-flex align-items-center justify-content-center spinner">
+                            <i class="bi bi-pencil-fill text-white"></i>
+                        </a>
+                        <a th:href="@{'/clients/delete/'+${item.id}}" class="bg-danger px-2 py-2 d-flex align-items-center justify-content-center spinner">
+                            <i class="bi bi-trash-fill text-white"></i>
+                        </a>    
                     </td>
                 </tr>
             </tbody>
         </table>
-
-        <a href="http://localhost:8080/clients/create" role="button">Novo Cliente</a>
     </main>
+    <style>
+        .spinner {
+            border-radius: 100%;
+            height: 50px;
+            width: 50px;
+        }
+
+        .spinner:hover{
+            font-size: 20px;
+            border: 5px solid #DCDCDC;
+            border-color: #3911eb;
+        }
+
+        .spinner.is-animating, .spinner:hover {
+            animation: loading 1s cubic-bezier(0, .05, .05, .05) infinite;
+        }
+
+        @keyframes loading {
+            0% {
+                transform: rotate(0);
+            }
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+        
+    </style>
 </body>
 </html>
