--- a/src/main/resources/templates/clients/edit.html
+++ b/src/main/resources/templates/clients/edit.html
@@ -21,7 +21,7 @@
             <li><strong>TWProjects</strong></li>
         </ul>
         <ul>
-            <li><a href="#">Clientes</a></li>
+            <li><a th:href="@{/clients}">Clientes</a></li>
         </ul>
     </nav>
     <main class="container">
