--- a/src/main/resources/templates/clients/index.html
+++ b/src/main/resources/templates/clients/index.html
@@ -4,19 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TWProjects Listagem de clientes</title>
+    
     <!--  Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> 
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    
+    <!-- <link rel="stylesheet" th:href="@{/css/bootstrap.icons.css}"> -->
+    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+    <link rel="stylesheet" th:href="@{/css/index-page.css}">
+
+    <script defer th:src="@{/js/bootstrap.min.js}"> </script>
 </head>
 <body>
     <nav class="container-fluid bg-primary text-white d-flex justify-content-between align-items-center py-5 px-5 mb-5">
         
-        <a href="http://localhost:8080/clients">
+        <a th:href="@{/clients}">
             <button class="btn btn-success text-white fs-4 px-4">TWProjects</button>
         </a>
         
-        <a href="http://localhost:8080/clients/create">
+        <a th:href="@{/clients/create}">
             <button class="btn btn-success text-white px-4">Adicionar 
                 <i class="bi bi-arrow-up-right-circle-fill fs-5"></i>
             </button>
@@ -39,15 +46,19 @@
             </thead>
             <tbody>
                 <tr th:each="item : ${clients}" class="pt-2">
-                    <td class="pt-2" th:text="*{item.id}"> </td>
-                    <td th:text="*{item.name}"> </td>
-                    <td th:text="*{item.email}"> </td>
-                    <td th:text="*{item.phone}"> </td>
+                    <td th:text ="*{item.id}" class="pt-2"> </td>
+                    <td th:text ="*{item.name}"> </td>
+                    <td th:utext="*{item.email}"> </td>
+                    <td> [[${item.email}]] </td>
                     <td class="d-flex align-items-center gap-1 justify-content-center w-75 ">
-                        <a th:href="@{'/clients/edit/'+${item.id}}" class="bg-warning  px-2 py-2 d-flex align-items-center justify-content-center spinner">
+                        <a th:href="@{/clients/edit/{id} (id=${item.id}) } " 
+                            class="bg-warning  px-2 py-2 d-flex align-items-center justify-content-center spinner">
                             <i class="bi bi-pencil-fill text-white"></i>
                         </a>
-                        <a th:href="@{'/clients/delete/'+${item.id}}" class="bg-danger px-2 py-2 d-flex align-items-center justify-content-center spinner">
+                        <a 
+                            th:href="@{'/clients/delete/' + ${item.id} }"
+                            onclick="return confirm('Deseja excluir ?')"
+                            class="bg-danger px-2 py-2 d-flex align-items-center justify-content-center spinner">
                             <i class="bi bi-trash-fill text-white"></i>
                         </a>    
                     </td>
@@ -55,32 +66,5 @@
             </tbody>
         </table>
     </main>
-    <style>
-        .spinner {
-            border-radius: 100%;
-            height: 50px;
-            width: 50px;
-        }
-
-        .spinner:hover{
-            font-size: 20px;
-            border: 5px solid #DCDCDC;
-            border-color: #3911eb;
-        }
-
-        .spinner.is-animating, .spinner:hover {
-            animation: loading 1s cubic-bezier(0, .05, .05, .05) infinite;
-        }
-
-        @keyframes loading {
-            0% {
-                transform: rotate(0);
-            }
-            100% {
-                transform: rotate(360deg);
-            }
-        }
-        
-    </style>
 </body>
 </html>
