--- a/src/main/resources/templates/clients/index.html
+++ b/src/main/resources/templates/clients/index.html
@@ -23,7 +23,7 @@
             <button class="btn btn-success text-white fs-4 px-4">TWProjects</button>
         </a>
         
-        <a th:href="@{/clients/create}">
+        <a th:href="@{/create}">
             <button class="btn btn-success text-white px-4">Adicionar 
                 <i class="bi bi-arrow-up-right-circle-fill fs-5"></i>
             </button>
